fix btn 5 on ios

--- a/css/styling.css
+++ b/css/styling.css
@@ -145,7 +145,7 @@ display:inline-block;
     border:none;
 }
 
-input[type="button"] {
+input, textarea{
     -webkit-appearance:none;
     -webkit-border-radius:0px;
     border-radius:0;
